[project]
name = "llmtraveler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=1.0.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
]
